--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Django==2.2.2
 django-cors-headers==3.0.2
 django-rest-swagger==2.2.0
 djangorestframework==3.9.4
+gunicorn==19.9.0
 idna==2.8
 ipython==7.5.0
 ipython-genutils==0.2.0
