--- a/compose/production/django/Dockerfile
+++ b/compose/production/django/Dockerfile
@@ -3,23 +3,14 @@ FROM python:3.7-alpine
 
 ENV PYTHONUNBUFFERED 1
 
-RUN addgroup -S django \
-  && adduser -S -G django django
-
 # Requirements are installed here to ensure they will be cached.
-COPY ./requirements /requirements
-RUN pip install --no-cache-dir -r /requirements/production.txt \
-  && rm -rf /requirements
+COPY ./requirements.txt /requirements.txt
+RUN pip install --no-cache-dir -r /requirements.txt
 
 COPY ./compose/production/django/start /start
 RUN sed -i 's/\r//' /start
 RUN chmod +x /start
-RUN chown django /start
 COPY . /app
-
-RUN chown -R django /app
-
-USER django
 
 WORKDIR /app
 
